version 0.74  2011-??-??

  * Tk GUI
    + add a 'next level' feature
    + undo shortcut change to Ctrl+Z
    + minor improvements in dialog boxes
    

version 0.73  2011-01-27

	* New: undo
	
	* New: default GUI with Tk library
	
	* Ruby requiered version down to 1.8.7
	
	* Curses and Portable user interface display a few more information


version 0.72  2011-01-21

  * New console output using curses
  
  * New command line options
    --curses : Use curses as user interface. Default option.
    --portable : Use a simplest user interface, should work on any platform.
    --help-output : Display help on available user interfaces.

  * Installing via RubyGem
 